# bendbionics

./: .cursorignore  .cursorrules  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  FLY_DEPLOYMENT.md  GITHUB_ACTIONS_UPDATE.md  ISSUE_MANAGEMENT.md  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  RULES.md  SCRIPTS.md  SERVER.md  TESTING_IMPROVEMENT_PLAN.md  TODO.md  build-tauri.sh  build.sh  calc.py  cleanup.sh  commitlint.config.js  deploy-workflow.sh  deploy.sh  dev-tauri.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  fly.toml  health-check.sh  main.py  package-lock.json  package.json  plot_robot.py  pyproject.toml  railway.env.template  railway.json  render.yaml  (+12 more)
.cursor/: settings.json
.cursor/rules/: backend-api.mdc  backend-patterns.mdc  design-system.mdc  development-workflow.mdc  frontend-components.mdc  frontend-patterns.mdc  project-overview.mdc  robot-simulation.mdc  startup-philosophy.mdc  startup-testing.mdc  testing-standards.mdc  testing.mdc
.github/: CI-CD.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  documentation.yml  feature.yml  feature_request.yml  question.yml
.github/workflows/: auto-assign-issues-simple.yml  auto-assign-issues.yml  build.yml  ci-simple.yml  ci.yml  deploy.yml  docs.yml  quick-test.yml  release-simple.yml  release.yml  security.yml  test-issue-automation.yml  test-trigger.yml  test.yml
.husky/: commit-msg  pre-commit  pre-push
backend/: .coveragerc  .dockerignore  .env  .env.backup  .env.example  .env.production  .env.production.example  Dockerfile  README.md  create_tables.py  docker-compose.yml  docker-run.sh  env.example  fly.toml  fly_start.py  init_database.py  migrate.py  migrations.py  package.json  pyproject.toml  railway_start.py  render_start.py  requirements.txt  run_coverage.py  setup_dev.py  soft_robot.db
backend/app/: auth.py  config.py  database.py  email.py  main.py  models.py
backend/app/api/: auth_routes.py  docs.py  error_routes.py  middleware.py  preset_routes.py  responses.py  routes.py  tendon_routes.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  preset.py  user.py
backend/app/models/pcc/: model.py  pcc_model.py  transformations.py  types.py
backend/app/models/tendon/: __init__.py  calculator.py  engine.py  eyelet_math.py  types.py
backend/app/services/: __init__.py  db_helpers.py  pcc.py  preset_service.py  token_service.py  user_service.py
backend/app/utils/: cache.py  email.py  error_tracking.py  geometry_tools.py  logger.py  logging.py  math_tools.py  performance.py  preset_helpers.py  serialization.py  startup.py  timezone.py
backend/docs/: conf.py  getting_started.rst  index.rst
backend/migrations/: remove_obsolete_user_fields.py
backend/tests/: conftest.py  test_api_routes.py  test_auth.py  test_auth_comprehensive.py  test_auth_simple.py  test_cache.py  test_config.py  test_config_comprehensive.py  test_config_simple.py  test_core_apis.py  test_database.py  test_email_simple.py  test_eyelet_math.py  test_geometry_tools.py  test_integration.py  test_logging.py  test_main.py  test_main_routes.py  test_math_tools.py  test_pcc.py  test_pcc_model_branch_coverage.py  test_pcc_model_simple.py  test_preset_routes.py  test_schema_check.py  test_tendon_calculator_simple.py  test_tendon_engine_simple.py  test_tendon_eyelet_orientation.py  test_tendon_routes.py
config/nginx/: bendbionics-porkbun.conf  bendbionics.conf
config/systemd/: bendbionics-api.service
deploy/nginx/: bendbionics-porkbun.conf  soft-robot-porkbun.conf  soft-robot.conf
deploy/systemd/: soft-robot-api.service
docker/: env.example
docker/certbot/: Dockerfile  link-certs.sh  reload-nginx.sh
docker/nginx/: Dockerfile  entrypoint.sh  nginx.conf  ssl.conf
frontend/: .dockerignore  .env.example  .env.production  .env.production.example  .prettierignore  .prettierrc  Dockerfile  FRONTEND_COVERAGE_SETUP.md  README.md  REFACTORING_GUIDE.md  RETRY_INTEGRATION.md  SEGMENTS_FEATURE.md  build.sh  bundle-size-report.json  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  eslint.config.js  fly.toml  index.html  lighthouserc.cjs  lighthouserc.js  nginx.conf  package-lock.json  package.json  performance-budget.json  playwright.config.ts  railway.json  soft-robot-app.code-workspace  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/.github/workflows/: test.yml
frontend/.husky/: pre-commit
frontend/.storybook/: main.ts  preview.ts
frontend/e2e/: app.spec.ts  visual-regression.spec.ts
frontend/public/: config.js
frontend/scripts/: bundle-size-check.js  test-runner.sh
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/__tests__/: App.simple.test.tsx  App.test.tsx  main.test.tsx
frontend/src/api/: auth.ts  (+2 more)
old_code/: calc.py  coupling_element.py  input_values.py  main.py  ui.py
old_code/project_data/: input_values.json
scripts/: bun-helper.sh  bundle-backend.sh  cleanup.sh  code-quality-report.js  commit-helper.js  get-project-id.sh  health-check.sh  lib.sh  productivity.sh  setup-github-issues.sh  setup.sh  test-build.sh  test-runner.sh
scripts/ddns/: README.md  setup-ddns.sh  update-dns.service  update-dns.sh  update-dns.timer
scripts/deploy/: cleanup.sh  fix-db-permissions.sh  server-deploy.sh  setup-postgres.sh  setup-sudo.sh  start-backend.sh  workflow.sh
scripts/docker/: backup.sh  build-and-push.sh  deploy-vps.sh  deploy.sh  setup.sh
(+218 files in other folders)
